--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,10 +13,16 @@
 
 h2,p{
 	color: white;
+	font-weight: 300;
 }
 
 body{
+	image-rendering: pixelated;
 	background: url('/background/checker.png');
+	background-size: 50px;
+	font-smooth: never;
+  -webkit-font-smoothing: none;
+	-moz-osx-font-smoothing: none;
 }
 
 main{
