--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -23,11 +23,28 @@ body{
 	font-smooth: never;
   -webkit-font-smoothing: none;
 	-moz-osx-font-smoothing: none;
+	
 }
 
 main{
-	background: #42132E;
+	box-shadow: 0px 10px 5px 10px rgba(0, 0, 0, 0.185);
 	min-height: 210vh;
 	max-width: 1200px;
 	margin: 0 auto;
+	background-color: #2C1727;
+	overflow: hidden;
+	position: relative;
+}
+main::before{
+	content: '';
+	background: url('/gif/starpattern.gif');
+	background-size: 300px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0%;
+	opacity: 0.1;
+	left: 0%;
+	user-select: none;
+	pointer-events: none;
 }
