Add content of the home page

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -17,7 +17,7 @@ h2,p{
 }
 
 body{
-	image-rendering: pixelated;
+	// image-rendering: pixelated;
 	background: url('/background/checker.png');
 	background-size: 50px;
 	font-smooth: never;
