Add section title and more detail on footer

--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -27,6 +27,12 @@
 		justify-content: center;
 		align-items: center;
 		gap: 1em;
+
+		.windows{
+			margin-right:-.5em;
+			margin-left: .25em;
+			scale: 1.25;
+		}
 		.credits{
 			padding: 0 .5em;
 			&:hover{
