Add schedule section

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -28,7 +28,7 @@ body{
 
 main{
 	box-shadow: 0px 10px 5px 10px rgba(0, 0, 0, 0.185);
-	min-height: 210vh;
+	// min-height: 210vh;
 	max-width: 1200px;
 	margin: 0 auto;
 	background-color: #2C1727;
