--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -1,4 +1,5 @@
 #container_home{
+	padding-bottom: 1em;
 	.hero-section{
 		display: grid;
 		grid-template-columns: 1.5fr 1fr;
@@ -66,6 +67,24 @@
 			}
 		}
 
+	}
+
+	.schedule-section{
+		
+		.schedule{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			padding: 100px;
+			.schedule-img{
+
+				border: 5px solid black;
+				border-radius: 2em;
+				object-fit: cover;
+				max-width: min(800px,100%);
+			}
+		}
 	}
 }
 
