--- a/src/components/sectionTitle/sectionTitle.scss
+++ b/src/components/sectionTitle/sectionTitle.scss
@@ -9,3 +9,13 @@
 		text-align: center;
 	}
 }
+
+.section-description{
+	text-align: center;
+	font-size: 1rem;
+	font-family: 'Times New Roman', monospace;
+	color: white;
+	padding: 1em;
+	max-width: min(600px,90%);
+	margin: 0 auto;
+}
