--- a/src/app/setup/setup.scss
+++ b/src/app/setup/setup.scss
@@ -1,5 +1,5 @@
-#container_games{
-
+#container_setup{
+	padding-bottom: 200px;
 	.setup-section{
 		// background-color: red;
 		.setup{
@@ -27,7 +27,7 @@
 						width: 100%;
 						background-color: #42132E;
 						position: relative;
-						z-index: 100;
+						z-index: 0;
 						display: grid;
 						grid-template-columns: 1fr 2fr;
 						box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.534);
@@ -70,6 +70,8 @@
 				position: relative;
 				.main-portrait{
 					max-width: 100%;
+					object-fit: cover;
+					height: 100%;
 					border: 2px solid #204E4B;
 				}
 
@@ -105,6 +107,58 @@
 					right: -20%;
 					opacity: 1;
 					animation: rainbow 2s infinite linear;
+				}
+			}
+		}
+	}
+
+	.peripheral-section{
+		padding-top: 100px;
+		.title{
+			width: min-content;
+			max-height: 70px;
+			width: 100%;
+			object-fit: contain;
+			object-position: center;
+		}
+
+		.peripherals{
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			gap: 1em;
+			justify-content: center;
+			// background: green;
+			.peripheral{
+				background-color: #204E4B;
+				display: flex;
+				flex-direction: column;
+				max-width: 240px;
+				z-index: 0;
+				box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.391);
+
+				position: relative;
+				.image{
+					padding: .3em;
+					// width: 240px;
+					height: 280px;
+					aspect-ratio: 1/1;
+					z-index: 10;
+					img{
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+
+				.detail{
+					font-size: .6rem;
+					min-height: 45px;
+					padding: .1em .5em;
+					background:url('/background/abstract_norm.png'),rgba(0, 0, 0, 0.53);
+					background-blend-mode: multiply;
+					display: flex;
+					align-items: center;
 				}
 			}
 		}
