Add the credits section

--- a/src/app/games/games.scss
+++ b/src/app/games/games.scss
@@ -59,6 +59,9 @@
 			justify-content: center;
 			.progress-list{
 				background-color: #201829;
+				background:  url('https://i.pinimg.com/originals/9a/6d/97/9a6d972891688889ea681efe64f0f9fe.gif'),rgba(0, 0, 0, 0.556);
+				background-blend-mode: multiply;
+				background-size: 200px;
 				width: 100%;
 				max-width: 400px;
 				box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.43);
