--- a/src/components/sectionTitle/sectionTitle.scss
+++ b/src/components/sectionTitle/sectionTitle.scss
@@ -14,8 +14,9 @@
 	text-align: center;
 	font-size: 1rem;
 	font-family: 'Times New Roman', monospace;
-	color: white;
+	color: #B53B9D;
 	padding: 1em;
+	letter-spacing: 2px;
 	max-width: min(600px,90%);
 	margin: 0 auto;
 }
