--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,6 +1,8 @@
 #header{
 
-
+	box-shadow: 2px 10px 9px rgba(0, 0, 0, 0.74);
+	position: relative;
+	z-index: 2;
 	.confine{
 		max-width: 1200px;
 		margin: 0 auto;
@@ -72,7 +74,7 @@
 		background-blend-mode: multiply;
 		height: 100%;
 		padding: .25em;
-		background-size: 230px;
+		background-size: 215px;
 		.confine{
 			display: flex;
 			justify-content: space-between;
