Add artworks page

--- a/src/app/credits/credits.scss
+++ b/src/app/credits/credits.scss
@@ -1,28 +1,6 @@
 #container_credits{
 
-	.credit-header{
-		.header-art{
-			display: flex;
-			justify-content: center;
-			position: relative;
-			.emote{
-				max-width: 200px;
-				max-height: 200px;
-				margin: 0 auto;
-				background: url('/background/phee_xo.png');
-				border-radius: 50%;
-				border: 5px solid #B53B9D;
-				box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.533);
-				margin: 2em;
-			}
-			.logo{
-				position: absolute;
-				max-width: 300px;	
-				bottom: 0%;
-			}
-		}
-	}
-
+	
 	.credit-list{
 		display: flex;
 		justify-content: center;
@@ -102,6 +80,7 @@
 				background-attachment: fixed;
 				background-size: 1400px 200px;
 				h2{
+					color: #52FF00;
 					background-color: #75b9b487;
 					font-size: 2rem;
 					padding: .2em 1em;
@@ -132,6 +111,8 @@
 						text-indent: -15px;
 						padding-top: .8em;
 						font-weight: bold;
+						color: #52FF00;
+
 					}
 
 					.handle{
