--- a/src/app/games/games.scss
+++ b/src/app/games/games.scss
@@ -87,6 +87,7 @@
 						.progress{
 							opacity: 0.5;
 							letter-spacing: 5px;
+							color: #52FF00;
 						}
 						&:hover{
 							padding:1em;
