--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -25,6 +25,17 @@ body{
   -webkit-font-smoothing: none;
 	-moz-osx-font-smoothing: none;
 	
+	&::before{
+		content: '';
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		// background-color: red;
+		user-select: none;
+		pointer-events: none;
+		box-shadow: inset 0px 0px 180px 50px rgba(0, 0, 0, 0.741);
+		z-index: 1;
+	}
 }
 
 main{
@@ -45,7 +56,7 @@ main::before{
 	width: 100%;
 	height: 100%;
 	top: 0%;
-	opacity: 0.06;
+	opacity: 0.09;
 	left: 0%;
 	user-select: none;
 	pointer-events: none;
