--- a/src/app/setup/setup.scss
+++ b/src/app/setup/setup.scss
@@ -49,10 +49,14 @@
 							display: flex;
 							align-items: center;
 							padding: .25em 1em;
-							opacity: .5;
+							opacity: .8;
+							p{
+								color: #52FF00;
+							}
 							text-decoration: underline;
 							text-decoration-color: white;
 							text-underline-offset: 5px;
+							
 						}
 					}
 				}
@@ -72,7 +76,7 @@
 					max-width: 100%;
 					object-fit: cover;
 					height: 100%;
-					border: 2px solid #204E4B;
+					border: 3px dashed #52FF00;
 				}
 
 				.decor{
@@ -130,7 +134,7 @@
 			justify-content: center;
 			// background: green;
 			.peripheral{
-				background-color: #204E4B;
+				background-color: #42132E;
 				display: flex;
 				flex-direction: column;
 				max-width: 240px;
@@ -139,7 +143,8 @@
 
 				position: relative;
 				.image{
-					padding: .3em;
+					// padding: .3em;
+					border: 4px dashed #204E4B;
 					// width: 240px;
 					height: 280px;
 					aspect-ratio: 1/1;
@@ -155,8 +160,13 @@
 					font-size: .6rem;
 					min-height: 45px;
 					padding: .1em .5em;
+					
 					background:url('/background/abstract_norm.png'),rgba(0, 0, 0, 0.53);
 					background-blend-mode: multiply;
+					
+					h2{
+						color: #52FF00;
+					}
 					display: flex;
 					align-items: center;
 				}
