Add the contacts page

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -9,9 +9,9 @@
 	}
 	.header-top{
 		min-height: 100px;
-		background: url('/background/rainbow_skull.png'),rgba(34, 14, 25, 0.61);
+		background: url('https://w0.peakpx.com/wallpaper/955/780/HD-wallpaper-dark-wall-emo-dark-new-wall-scene.jpg'),rgba(34, 14, 25, 0.61);
 		background-blend-mode: multiply;
-		background-size: 100px;
+		background-size: 300px;
 		position: relative;
 		z-index: 100;
 		overflow: hidden;
