--- a/src/app/setup/setup.scss
+++ b/src/app/setup/setup.scss
@@ -130,9 +130,16 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: center;
-			gap: 1em;
+			gap: 5em 1em;
 			justify-content: center;
 			// background: green;
+			padding: 2em;
+
+			&:hover{
+				.peripheral:not(:hover){
+					filter: brightness(45%);
+				}
+			}
 			.peripheral{
 				background-color: #42132E;
 				display: flex;
@@ -141,6 +148,14 @@
 				z-index: 0;
 				box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.391);
 
+				transition: all 100ms ease;
+				&:hover{
+					scale: 1.05;
+
+					.decor{
+						rotate: 20deg;
+					}
+				}
 				position: relative;
 				.image{
 					// padding: .3em;
@@ -149,10 +164,18 @@
 					height: 280px;
 					aspect-ratio: 1/1;
 					z-index: 10;
-					img{
+
+					.periph-img{
 						width: 100%;
 						height: 100%;
 						object-fit: cover;
+					}
+					.decor{
+						position: absolute;
+						left: 35%;
+						top: -10%;
+						width: 65px;
+						height: 65px;
 					}
 				}
 
