--- a/src/app/contacts/contacts.scss
+++ b/src/app/contacts/contacts.scss
@@ -4,6 +4,7 @@
 		display: grid;
 		grid-template-columns: 1fr 3fr;
 		padding: 3em;
+		margin-bottom: 200px;
 		.art-part{
 			padding: 1em;
 			.main-art{
@@ -82,12 +83,16 @@
 					margin-top: 1em;
 					padding: .5em;
 					resize: none;
-					font-size: 1rem;
 					background: url('https://i.pinimg.com/originals/ba/73/46/ba7346280e7372c5c74b3596dff0d53d.jpg'),#132913;
 					background-blend-mode: multiply;
 					background-size: 200px;
 					border: 5px dotted #52FF00;
 					font-size: 1.5rem;
+
+					span{
+						font-size: 8rem;
+						font-weight: bold;
+					}
 					&::placeholder{
 						opacity: 1;
 						color: #2d4d1ec4;
@@ -105,6 +110,60 @@
 				}
 			}
 			
+		}
+	}
+
+
+	.guestbook{
+		display: flex;
+		flex-direction: column;
+		padding: 1em;
+		.guest{
+			background:url('https://e1.pxfuel.com/desktop-wallpaper/850/966/desktop-wallpaper-emo-scene-backgrounds-emo-backgrounds.jpg'),rgba(0, 0, 0, 0.841);
+			background-blend-mode: multiply;
+			margin: 1em;
+			padding: 1em;
+			background-size: 400px;
+			position: relative;
+			box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.386);
+			transition: all 100ms ease;
+			&:hover{
+				
+				scale: 1.02;
+				.messages{
+					color: #52FF00;
+				}
+			}
+			.messages{
+				font-size: 1rem;
+				opacity: 1;
+				transition: all 100ms ease;
+			}
+			.info{
+				margin-top: 2em;
+				background: #132928;
+				padding: .55em;
+				display: flex;
+				justify-content: space-between;
+				.decor{
+					max-height: 50px;
+				}
+				.username{
+					font-size: 1.2rem;
+					font-weight: bold;
+					span{
+						font-weight: normal;
+						font-size: .8rem;
+					}
+				}
+				.detail{
+					font-size: 1rem;
+					opacity: .8;
+					span{
+						color: #ff3d91;
+					}
+				}
+			}
 		}
 	}
 }
