--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,6 +16,9 @@ h2,p{
 	font-weight: 300;
 }
 
+.sparkles{
+	position: absolute;
+}
 body{
 	// image-rendering: pixelated;
 	background: url('/background/checker.png'),rgba(0, 0, 0, 0.32);
@@ -56,7 +59,7 @@ main::before{
 	width: 100%;
 	height: 100%;
 	top: 0%;
-	opacity: 0.09;
+	opacity: 0.07;
 	left: 0%;
 	user-select: none;
 	pointer-events: none;
