--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -2,7 +2,7 @@
 
 	box-shadow: 2px 10px 9px rgba(0, 0, 0, 0.74);
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 	.confine{
 		max-width: 1200px;
 		margin: 0 auto;
@@ -75,6 +75,8 @@
 		height: 100%;
 		padding: .25em;
 		background-size: 215px;
+		z-index: 1000;
+		position: relative;
 		.confine{
 			display: flex;
 			justify-content: space-between;
@@ -93,6 +95,7 @@
 			gap: 1em;
 			.guestbook{
 				position: relative;
+				z-index: 1000;
 				top: 2px;
 				height: 20px;
 				scale: 1.3;	
