Fix text and pattern

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -49,9 +49,9 @@
 		}
 
 		.hero-art{
-			background:url('/background/pheecirclex.png'),rgba(0, 0, 0, 0.699);
+			background:url('/background/phee_xo_tiled.png'),rgba(0, 0, 0, 0.699);
 			background-blend-mode: multiply;
-			background-size: 600px;
+			background-size: 70px;
 			animation:pattern-scroll 20s infinite linear;
 			position: relative;
 			.main-art{
