--- a/src/app/setup/setup.scss
+++ b/src/app/setup/setup.scss
@@ -61,8 +61,8 @@
 					}
 				}
 				.decor-pattern{
-					background: url('/background/pheecirclex.png');
-					background-size: 500px;
+					background: url('/background/phee_xo_tiled.png');
+					background-size: 50px;
 					opacity: 0.3;
 					width: 100%;
 					height: 100%;
