--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -43,7 +43,9 @@ body{
 
 main{
 	box-shadow: 0px 10px 5px 10px rgba(0, 0, 0, 0.185);
-	min-height: 210vh;
+	// min-height: 210vh;
+	padding-bottom: 200px;
+	min-height: 100vh;
 	max-width: 1200px;
 	margin: 0 auto;
 	background-color: rgb(37, 20, 33);
