--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,7 +27,7 @@ body{
 	font-smooth: never;
   -webkit-font-smoothing: none;
 	-moz-osx-font-smoothing: none;
-	
+	overflow-x: hidden;
 	&::before{
 		content: '';
 		position: fixed;
