--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -3,7 +3,8 @@
 	box-shadow: 2px 10px 9px rgba(0, 0, 0, 0.74);
 	position: relative;
 	z-index: 4;
-	overflow: hidden;
+	// overflow-x: hidden;
+	overflow-y: visible;
 	.confine{
 		max-width: 1200px;
 		margin: 0 auto;
