Add responsiveness to the credit page

--- a/src/app/credits/credits.scss
+++ b/src/app/credits/credits.scss
@@ -148,6 +148,8 @@
 				grid-template-columns: 1fr 1.5fr;
 				.pfp{
 					padding: 2em;
+					display: flex;
+					align-items: center;
 					img{
 						max-width: 100%;
 						border: 4px solid #204E4B;
@@ -205,5 +207,56 @@
 				}
 			}
 		}
+	}
+	
+}
+
+
+
+@media screen and (width <= 1024px) {
+	#container_credits .mods-list{
+		padding:1em;
+	}
+
+	#container_credits .management-info .window .window-header h2{
+		font-size: 1.5rem;
+	}
+}
+
+@media screen and (width <= 768px) {
+	#container_credits .mods-list{
+		display: flex;
+		flex-direction: column;
+		gap: 1em;
+	}
+	#container_credits .management-info .window .window-body{
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		text-align: center;
+	}
+	#container_credits .management-info .window .window-body .details {
+		align-items: center;
+		padding-bottom: 100px;
+		& .name{
+			padding-top: 0;
+		}
+	}
+	#container_credits .management-info .window .window-body .details .bio{
+		max-width: 90%;
+	}
+}
+
+
+@media screen and (width <= 425px){
+	#container_credits .management-info .window .window-header h2{
+		font-size: 1rem !important;
+		padding: .1em .5em;
+	}
+	#container_credits .management-info .window .window-header img{
+		max-width: 70px;
+	}
+	#container_credits .management-info .window .window-body .details .bio{
+		font-size: .65rem;
 	}
 }
