--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -37,7 +37,7 @@
 		border-left-color:#144235;
 	}
 	&:focus{
-		outline: 2px dotted white;
+		outline: 2px dotted #1e4b09;
 		outline-offset: -6px;
 	}
 }
