--- a/src/app/setup/setup.scss
+++ b/src/app/setup/setup.scss
@@ -143,7 +143,6 @@
 			justify-content: center;
 			// background: green;
 			padding: 2em;
-
 			&:hover{
 				.peripheral:not(:hover){
 					filter: brightness(45%);
@@ -152,6 +151,8 @@
 			.peripheral{
 				background-color: #42132E;
 				display: flex;
+				cursor: pointer;
+
 				flex-direction: column;
 				max-width: 240px;
 				z-index: 0;
